release executable for Linux